example/gardener-local/etcd/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: etcd
spec:
  type: ClusterIP
  clusterIP: None
  publishNotReadyAddresses: true
  selector:
    app: etcd
  ports:
  - name: client
    port: 2379
    targetPort: 2379
  - name: discovery
    port: 2380
    targetPort: 2380
---
apiVersion: v1
kind: Service
metadata:
  name: etcd-client
spec:
  type: ClusterIP
  selector:
    app: etcd
  ports:
  - name: client
    port: 2379
    targetPort: 2379
